# token-pipeline

./: .gitignore  CHANGELOG.md  Cargo.toml  HOW_FILTERS_WORK_TH.md  MIGRATION.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
configs/: claude-CLAUDE.md  codex-instructions.md  copilot-instructions.md  cursor-rules.md  hermes-AGENTS.md
scripts/: hook.sh
src/: config.rs  discover.rs  error.rs  gain.rs  hook.rs  input_filter.rs  main.rs  optimizer.rs  output_compress.rs  proxy.rs  read.rs  rewrite.rs  stats.rs
tests/: cli_integration.rs
