[package]
name = "token-pipeline"
version = "0.1.0"
edition = "2021"
description = "Full token optimization pipeline: RTK filter → KatGPT-RS optimize → Caveman compress"

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tiny_http = "0.12"
regex = "1"
