[package]
name = "token-pipeline"
version = "1.0.0"
edition = "2021"
description = "CLI output filter + LLM proxy optimizer — replaces rtk + caveman"

[[bin]]
name = "tp"
path = "src/main.rs"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
regex = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
